--- a/src/app/course/event-analytics/event-analytics.component.scss
+++ b/src/app/course/event-analytics/event-analytics.component.scss
@@ -1,28 +1,27 @@
-.axes {
-    height: 18.75rem;
-    width: 37.5rem;
-}
-
-.card {
-  /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  border-radius: 10px;
-  width: 50%;
-  padding: 10px 5px 10px 5px;
-
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.container {
-  padding: 2px 16px;
+a{
+    cursor: default;
+    text-decoration: none;
 }
 
 td{
-    padding: 5px 5px 5px 5px
+    margin: 2px 2px 2px 2px;
+    padding: 2px 2px 2px 2px;
 }
+
+table{
+    width: 100%;
+}
+
+th{
+    padding: 2px 4px 2px 4px;
+}
+
+.tui-island__content{
+    width:100%;
+}
+
+.correct_ans{
+    color: var(--tui-positive);
+    font-weight: bold;
+}
+
