--- a/src/app/course/analytics/analytics.component.html
+++ b/src/app/course/analytics/analytics.component.html
@@ -1,11 +1,11 @@
 <span class="tui-text_h4">Average Course Grade:     </span>
 <label *ngIf="value" tuiProgressLabel>
-    <span class="percent">{{avgGrade}}%</span>
+    <span class="percent">{{course_grade > 0 ? course_grade.toFixed(2) : 0}}%</span>
 
     <tui-progress-circle
         size="xl"
         [max]="max"
-        [value]="avgGrade"
+        [value]="course_grade > 0 ? course_grade : 0"
     ></tui-progress-circle>
 </label>
 
@@ -55,125 +55,6 @@
 </ng-container>
 <ng-container *ngIf="tabsComponent.activeItemIndex === 2">
     <app-student [course]="course"></app-student>
-    <tui-input icon="tuiIconSearchLarge" [(ngModel)]="search">Search People</tui-input>
-    <br><br>
-    <div class="tui-container tui-container_adaptive tui-container_example" style="margin-left: 0; width: 100%">
-        <div class="tui-row tui-row_adaptive">
-            <div class="tui-col_xs-12 tui-col_md-7 tui-col_lg-7">
-                <p class="tui-text_h6">37 Students</p><br>
-                <table tuiTable class="table" [columns]="columns">
-                    <thead>
-                    <tr tuiThGroup>
-                        <th tuiTh [resizable]="true">Name</th>
-                        <th tuiTh>Page View</th>
-                        <th tuiTh>Last Time Active</th>
-                        <th tuiTh>Submission</th>
-                        <th tuiTh>Missing Submission</th>
-                        <th tuiTh>Current Score</th>
-                        <th tuiTh>Concepts Struggling With</th>
-                    </tr>
-                    </thead>
-                    <tbody tuiTbody [data]="students">
-                    <tr *tuiRow="let item of students" tuiTr>
-                        <td *tuiCell="'name'" tuiTd>
-                            <a href="">{{item.name}}</a>
-                        </td>
-                        <td *tuiCell="'pageView'" tuiTd>
-                            {{item.pageView}}
-                        </td>
-                        <td *tuiCell="'lastActive'" tuiTd>
-                            {{item.lastActive}}
-                        </td>
-                        <td *tuiCell="'submission'" tuiTd>
-                            {{item.submission}}
-                        </td>
-                        <td *tuiCell="'missing'" tuiTd>
-                            {{item.missing}}
-                        </td>
-                        <td *tuiCell="'score'" tuiTd>
-                            {{item.score}}
-                        </td>
-                        <td *tuiCell="'categoryStruggling'" tuiTd>
-                            {{item.categoryStruggling}}
-                        </td>
-
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="tui-col_xs-12 tui-col_md-5 tui-col_lg-5">
-                <div class="card">
-                  <div class="container">
-                    <tui-notification status="warning" class="tui-space_top-4">
-                        Potential At-Risk Students
-                    </tui-notification><br>
-                    <table tuiTable class="table" [columns]="atRiskCol">
-                        <thead>
-                        <tr tuiThGroup>
-                            <th tuiTh [resizable]="true">Name</th>
-                            <th tuiTh>Risk Type</th>
-                            <th tuiTh>Page View</th>
-                            <th tuiTh>Last Time Active</th>
-                            <th tuiTh>Submission</th>
-                            <th tuiTh>Missing Submission</th>
-                            <th tuiTh>Current Score</th>
-                            <th tuiTh>Concepts Struggling With</th>
-                        </tr>
-                        </thead>
-                        <tbody tuiTbody [data]="atRiskStudents">
-                        <tr *tuiRow="let item of atRiskStudents" tuiTr>
-                            <td *tuiCell="'name'" tuiTd>
-                                <a href="">{{item.name}}</a>
-                            </td>
-                            <td *tuiCell="'riskType'" tuiTd>
-                                <div *ngIf="item.riskType === 'Dropout'">
-                                    <tui-badge
-                                        status="error"
-                                        value="Dropout"
-                                        class="tui-space_right-2"
-                                    ></tui-badge>
-                                </div>
-                                <div *ngIf="item.riskType === 'Struggling'">
-                                    <tui-badge
-                                        status="warning"
-                                        value="Struggling"
-                                        class="tui-space_right-2"
-                                    ></tui-badge>
-                                </div>
-                            </td>
-
-                            <td *tuiCell="'pageView'" tuiTd>
-                                {{item.pageView}}
-                                <p style="color: #dd4c1e">↓ -35</p>
-                            </td>
-                            <td *tuiCell="'lastActive'" tuiTd>
-                                {{item.lastActive}}
-                            </td>
-                            <td *tuiCell="'submission'" tuiTd>
-                                {{item.submission}}
-                                <p style="color: #3aa981">↑ +1</p>
-                            </td>
-                            <td *tuiCell="'missing'" tuiTd>
-                                {{item.missing}}
-                                <p style="color: #dd4c1e">↑ +7</p>
-                            </td>
-                            <td *tuiCell="'score'" tuiTd>
-                                {{item.score}}
-                            </td>
-                            <td *tuiCell="'categoryStruggling'" tuiTd>
-                                {{item.categoryStruggling}}
-                            </td>
-
-                        </tr>
-                        </tbody>
-                    </table>
-
-                  </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
 </ng-container>
 <ng-container *ngIf="tabsComponent.activeItemIndex === 3">
     <div class="tui-container tui-container_fullwidth">
